new `Helper` to reduce parser overhead and support continuation prompt

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,6 +72,7 @@ with-fuzzy = ["skim"]
 case_insensitive_history_search = ["regex"]
 # For continuation prompt, indentation, scrolling
 split-highlight = []
+continuation-prompt = []
 
 [[example]]
 name = "custom_key_bindings"
@@ -97,6 +98,9 @@ required-features = ["derive"]
 [[example]]
 name = "sqlite_history"
 required-features = ["with-sqlite-history"]
+[[example]]
+name = "continuation_prompt"
+required-features = ["custom-bindings", "derive", "continuation-prompt", "split-highlight"]
 
 [package.metadata.docs.rs]
 features = [
