--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ members = ["rustyline-derive"]
 # For convenience / compatibilty, you can highlight the whole input buffer, ansi-str helps to split
 ansi-str = { version = "0.8.0", optional = true }
 # ansi_str::Style is immutable so we use anstyle::Style instead
-anstyle = { version = "1.0.8", optional = true }
+anstyle = "1.0.8"
 bitflags = "2.6"
 cfg-if = "1.0"
 # For file completion
