--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,7 +71,7 @@ with-sqlite-history = ["rusqlite"]
 with-fuzzy = ["skim"]
 case_insensitive_history_search = ["regex"]
 # For continuation prompt, indentation, scrolling
-split-highlight = []
+# split-highlight = []
 
 [[example]]
 name = "custom_key_bindings"
@@ -99,7 +99,7 @@ name = "sqlite_history"
 required-features = ["with-sqlite-history"]
 [[example]]
 name = "continuation_prompt"
-required-features = ["custom-bindings", "derive", "split-highlight"]
+required-features = ["custom-bindings", "derive"]
 
 [package.metadata.docs.rs]
 features = [
@@ -108,8 +108,8 @@ features = [
     "with-dirs",
     "with-file-history",
     "with-fuzzy",
-    "split-highlight",
-    "anstyle",
+    # "split-highlight",
+    # "anstyle",
 ]
 all-features = false
 no-default-features = true
